# Ideabox

./: .flake8  .gitignore  README.md  pyproject.toml
src/: main.py  masks.py  processing.py  widget.py
vem/: pyvenv.cfg
vem/Scripts/: activate  activate.bat
