[tool.poetry]
name = "pythonprojectbank"
version = "0.1.0"
description = ""
authors = ["Anastasia <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
requests = "^2.32.3"
flake8 = "^7.1.0"
mypy = "^1.10.1"
black = "^24.4.2"
isort = "^5.13.2"

[tool.black]
line-length = 119

[tool.mypy]
no_implicit_optional = true
warn_return_any = true
exclude = 'vem'

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
